Ajusta alguns endpoints, cria sistemas de desligar/reinicar o servidor (reiniciar o servidor depende do executavel estar configurado como serviço no windows). Ajusta a estrutura e localização de algumas funções globais
